
  * debian/dirs:
    + [NT] Remove /var/lib/lintian, we no longer use it.
  * debian/docs:
    + [NT] Add auto-generated API documentation.
  * debian/rules:
    + [NT] Generate API documentation during build.

  * frontend/lintian:
    + [NT] Add information about memory usage with -ddd if
      Devel::Size is available.  A more detailed breakdown
      of the memory usage with -dddd.

  * lib/Lintian/Collect/Source.pm:
    + [NT] "binaries" and "binary_field" now only exposes data
      about entries in d/control with a valid package name.
    + [NT] Document that "binaries" return an unorderd list.
  * lib/Lintian/ProcessablePool.pm:
    + [NT] Fix a bug that could cause .changes files to be
      silently skipped.  This only occured if a related package
      was passed on the command line before the .changes file.
      Thanks to Salvo Tomaselli for reporting the bug.
      (Closes: #714437)

  * reporting/harness:
    + [NT] Clear some variables before running Lintian in the
      hope it will reduce the memory pressure on "long runs".


 -- Niels Thykier <niels@thykier.net>  Sat, 29 Jun 2013 21:11:09 +0200

lintian (2.5.14) unstable; urgency=low

  * Summary of tag changes:
    + Removed:
      - upstream-version-not-numeric

  * checks/*:
    + [NT] Rename all checks to include the extension ".pm".
      (Closes: #710405)
    + [JW] Fix typos in several files.
  * checks/binaries.pm:
    + [NT] Also check for the presence of "mcount" to detect
      whether a binary was compiled with profiling.
      (Closes: #712124)
    + [NT] Ignore "teH" when checking for spelling mistakes in
      ELF binaries.  Thanks to Ryan Kavanagh for the report.
      (Closes: #711207)
  * checks/cruft.pm:
    + [NT] Revise a few tests that relied on file(1) on text files.
    + [NT] Apply patches from Bastien Roucariès to fix some false
      positives in the GDFL related checks.  (Closes: #711119)
    + [NT] Show the full path with source-contains-unsafe-symlink